[Feature] add example prompts, generate description, stable diffusion version

--- a/styles/Analyze.module.css
+++ b/styles/Analyze.module.css
@@ -71,4 +71,8 @@
     .greyBgContent {
         flex-direction: column; /* Stack children vertically */
     }
+    
+    .analyzeContent {
+        margin-left: 15px;
+    }
 }
