--- a/styles/Analyze.module.css
+++ b/styles/Analyze.module.css
@@ -11,6 +11,7 @@
     margin-left: auto; /* Center the section horizontally */
     margin-right: auto; /* Center the section horizontally */
     padding-top: 32px; /* Padding for top */
+    padding-bottom: 100px;
 }
 
 .greyBgContent {
