--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,5 @@
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -25,10 +24,11 @@
   background-color: white;
   display: flex;
   padding: 0.8rem;
+  padding-bottom: 100px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: relative
+  position: relative;
 }
 
 .titleContainer {
