--- a/styles/SearchBar.module.css
+++ b/styles/SearchBar.module.css
@@ -41,7 +41,7 @@
   margin-top: 58.67px;
   margin-right: 13px; /* Ensure this margin matches the gap you want between searchBar and searchButton */
   padding-left: 30px;
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -50,7 +50,7 @@
 
 .searchBar::placeholder {
   color: #C9C9C9;
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -77,7 +77,7 @@
 }
 
 .searchButtonText {
-  font-family: Roboto, sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 600;
@@ -104,7 +104,7 @@
 .sdButtonText {
   transform: rotate(0.333deg);
   color: var(--Gray-2, #797B7B);
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 600;
