most sizings done

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -4,6 +4,8 @@
     width: 100%;
     font-family: 'Roboto', sans-serif;
     padding-bottom: 69px;
+    position: relative;
+    margin-top: 375px;
 }
 
 .leftFrame {
