--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,9 @@
+.bgImage {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+}
+
 .container {
   min-height: 100vh;
   display: flex;
@@ -6,59 +12,53 @@
   align-items: center;
 }
 
-.title {
-  margin: auto;
-  margin-top: -1rem;
-  line-height: 4rem;
-  font-size: 3.6rem;
-}
-
-.title {
-  text-align: center;
-}
-
 .mainContainer {
-  margin-top: -70px;
-  width: 893px;
-  height: 556px;
-  background-color: white;
   display: flex;
-  padding: 0.8rem;
-  padding-bottom: 100px;
   flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 14vw;
+  width: 66vw;
+  height: 75vh;
+  background-color: white;
+  padding: 10vh 4.68vw 10vh 4.68vw;
   justify-content: center;
   align-items: center;
   position: relative;
 }
 
 .titleContainer {
-  width: 765px;
-  height: 184px;
-  background-color: white;
-  line-height: 4rem;
-  font-size: 3.6rem;
-  padding: 47px 64px 47px 64px;
-  margin-top: -30%;
-  position: absolute;
+  width: 56vw;
+  height: 24vh;
+  font-family: 'Roboto', sans-serif;
+  font-size: 5vw;
+  font-weight: 600;
+  line-height: 12vh;
+  letter-spacing: 0em;
+  text-align: center;
+  white-space: nowrap;
 }
 
 .descriptionContainer {
-  position: absolute;
-  margin-top: 69px;
+  display: flex;
+  margin-top: 9vh;
+  margin-bottom: 9vh;
+  margin-left: 2vw;
+  margin-right: 2vw;
+  width: 50vw;
+  height: 7.8vh;
+  align-items: center;
 }
 
 .navButtons {
-  margin-top: 395px;
-  height: 350px;
-  position: relative;
+  display: flex;
+  height: 80px;
 }
 
 .genPageButton1 {
-  position: absolute;
-  margin-left: -360px;
+  padding-right: 32px;
 }
 
 .genPageButton2 {
-  position: absolute;
-  margin-left: 40px;
+  padding-left: 32px;
 }
