--- a/styles/Analyze.module.css
+++ b/styles/Analyze.module.css
@@ -29,7 +29,8 @@
     font-size: 32px;
     font-style: normal;
     font-weight: 600;
-    line-height: 40px; /* 125% */}
+    line-height: 40px; /* 125% */
+}
 
 .promptIconContainer {
     display: flex;
