--- a/styles/GeneratePage.module.css
+++ b/styles/GeneratePage.module.css
@@ -23,6 +23,7 @@
   margin-right: auto;
   width: 80%;
   max-width: 1350px;
+  margin-bottom: 152px;
 }
 
 .trendingTitle {
@@ -56,6 +57,8 @@
   align-items: center; /* Center vertically */
   flex-direction: column;
   width: 100%; /* Take the full width of the parent element */
+  margin-top: 60px;
+  margin-bottom: 700px;
 }
 
 .loadingText {
