--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -2,6 +2,7 @@
 
 .footerContainer {
     display: flex;
+    flex-wrap: wrap;
     background-color: #222222;
     width: 100%;
     font-family: 'Roboto', sans-serif;
@@ -10,23 +11,23 @@
 }
 
 .leftFrame {
-    margin-left: 123px;
-    margin-top: 62px;
-    width: 458px;
-    height: 169px;
+    margin: 20px;
+    margin-left: 46px;
+    width: 100%;
+    max-width: 458px;
 }
 
 .firstLine {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
-    text-align: center;
     align-items: center;
     height: 35px;
     padding: 0;
 }
 
 .title1 {
-    font-weight: 600px;
+    font-weight: 600;
     font-size: 32px;
     line-height: 40px;
     color: #A4ACA8;
@@ -35,97 +36,69 @@
 
 .firstLineItem {
     white-space: nowrap;
-    margin-left: 30px;
-    margin-right: 30px;
-    width: 66px;
-    height: 18.71px;
+    margin: 10px 30px;
     font-size: 14px;
     font-weight: 700;
     line-height: 20px;
-    text-align: left;
     color: #F7FCFA;
 }
 
 .spacing1 {
-    padding: 0;
-    width: 162px;
-    height: 108px;
+    height: 20px;
 }
 
 .secondLine {
     display: flex;
     justify-content: space-between;
-    text-align: center;
     align-items: center;
     height: 26px;
+    flex-wrap: wrap;
 }
 
-.secondLineItem1 {
+.secondLineItem1, .secondLineItem2 {
     white-space: nowrap;
-    margin-right: 30px;
-    width: 150px;
+    margin: 10px 30px;
     font-size: 14px;
     font-weight: 700;
     line-height: 20px;
-    text-align: left;
-    color: #797B7B;
-}
-
-.secondLineItem2 {
-    white-space: nowrap;
-    margin-left: 30px;
-    width: 107px;
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 20px;
-    text-align: left;
     color: #797B7B;
 }
 
 .rightFrame {
-    padding-top: 62px;
-    width: 458px;
-    height: 169px;
-    margin-right: 105px;
+    margin: 20px;
+    margin-left: 46px;
+    width: 100%;
+    max-width: 458px;
 }
 
 .signup {
-    white-space: nowrap;
-    width: 331px;
+    width: 100%;
     height: 32px;
-    text-align: center;
     font-size: 24px;
     font-weight: 600;
     line-height: 32px;
-    text-align: left;
     color: #F7FCFA;
-    width: Hug (430px)px;
-    gap: 9px;
+    text-align: left;
 }
 
 .emailContainer {
     display: flex;
     justify-content: space-between;
-    text-align: center;
     align-items: center;
-    width: 134px;
-    height: 48px;
     margin-top: 9px;
 }
 
 .enterEmail {
-    white-space: nowrap;
-    width: 280px;
+    width: 100%;
+    max-width: 280px;
     height: 48px;
     font-size: 16px;
     font-weight: 600;
     line-height: 22px;
-    text-align: left;
     color: #797B7B;
     background-color: rgba(255, 255, 255, 0);
     border: none;
     border-bottom: 1px solid #797B7B;
-    margin-right: 16px;
 }
 
 .enterEmail:focus {
@@ -135,8 +108,8 @@
 .emailButton {
     padding: 11px 22px 11px 22px;
     gap: 10px;
+    margin-right: 64px;
     border-radius: 30px;
-    border: 1px;
     border: 1px solid #797B7B;
     background-color: rgba(255, 255, 255, 0);
     font-size: 20px;
@@ -147,5 +120,22 @@
 }
 
 .spacing2 {
-    margin-left: 324px;
+    display: none;
+    margin-left: 124px;
+}
+
+/* Media Queries for Responsive Design */
+@media (min-width: 768px) {
+    .footerContainer {
+        flex-wrap: nowrap;
+    }
+
+    .leftFrame, .rightFrame {
+        width: 50%;
+        max-width: none;
+    }
+
+    .spacing1, .spacing2 {
+        display: block;
+    }
 }
