--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -7,7 +7,8 @@
     width: 100%;
     font-family: 'Roboto', sans-serif;
     padding-bottom: 69px;
-    position: relative;
+    position: fixed;
+    bottom: 0;
 }
 
 .leftFrame {
