--- a/styles/GeneratePage.module.css
+++ b/styles/GeneratePage.module.css
@@ -100,3 +100,51 @@
   margin-left: auto; /* Center horizontally */
   margin-right: auto; /* Center horizontally */
 }
+
+.analyzeView {
+  width: 80%;
+  display: flex;
+  height: 500px;
+  gap: 15px;
+  align-items: center;
+  margin-top: 60px;
+  margin-bottom: 250px;
+  margin-left: auto; /* Center horizontally */
+  margin-right: auto; /* Center horizontally */
+}
+
+.sceneGraph {
+  flex: 1;
+  border: 1px solid;
+  height: 100%;
+}
+
+.imageView {
+  flex: 1;
+  border: 1px solid;
+  height: 100%;
+  overflow-y: scroll;
+}
+
+.imageContainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-gap: 1rem;
+  padding: 1rem;
+}
+
+.imageItem {
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%;
+  position: relative;
+}
+
+.imageItem img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
