--- a/styles/GeneratePage.module.css
+++ b/styles/GeneratePage.module.css
@@ -104,7 +104,7 @@
 .analyzeView {
   width: 80%;
   display: flex;
-  height: 500px;
+  height: 1000px;
   gap: 15px;
   align-items: center;
   margin-top: 60px;
@@ -147,4 +147,15 @@
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+
+.imageBadge {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 20px;
+  height: 20px;
+  background-color: #fff;
+  border: 1px solid;
+  text-align: center;
 }
