--- a/styles/GeneratePage.module.css
+++ b/styles/GeneratePage.module.css
@@ -103,11 +103,11 @@
 
 .analyzeView {
   width: 80%;
-  display: flex;
+  /* display: flex; */
   height: 1000px;
   gap: 15px;
   align-items: center;
-  margin-top: 60px;
+  margin-top: 40px;
   margin-bottom: 250px;
   margin-left: auto; /* Center horizontally */
   margin-right: auto; /* Center horizontally */
