--- a/styles/GeneratePage.module.css
+++ b/styles/GeneratePage.module.css
@@ -104,11 +104,11 @@
 .analyzeView {
   width: 80%;
   /* display: flex; */
-  height: 1000px;
+  height: auto;
   gap: 15px;
   align-items: center;
   margin-top: 40px;
-  margin-bottom: 250px;
+  margin-bottom: 50px;
   margin-left: auto; /* Center horizontally */
   margin-right: auto; /* Center horizontally */
 }
