--- a/styles/SearchBar.module.css
+++ b/styles/SearchBar.module.css
@@ -67,6 +67,7 @@
 
 .generateContainer {
   margin-top: 28px;
+  margin-bottom: 28px;
   display: flex;
   flex-direction: row; /* Stack children horizontally */
   position: relative;
